Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test17.java
/* Test17
 * Objetivo: Detectar que la condicion de corte del while no estaba 
 * encerrada con parentesis.
 */
class clase
{
	dynamic void metodo()
	var int x;
	{
		x = 0;
		while x < 10
			x = x + 1;
	}
	
}
